--- a/app/src/main/res/layout-land/position_fragment.xml
+++ b/app/src/main/res/layout-land/position_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:id="@+id/main_activity_layout"
+    android:id="@+id/mainActivityLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,14 +12,14 @@
 
     <!-- Coordinates -->
     <RelativeLayout
-        android:id="@+id/coordinates_layout"
+        android:id="@+id/coordinatesLayout"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight=".5"
         android:gravity="center">
 
         <android.support.v4.view.ViewPager
-            android:id="@+id/coordinates_view_pager"
+            android:id="@+id/coordinatesViewPager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/activity_vertical_margin"
@@ -29,7 +29,7 @@
             android:paddingStart="@dimen/activity_horizontal_margin">
 
             <com.itsronald.widget.ViewPagerIndicator
-                android:id="@+id/view_pager_indicator"
+                android:id="@+id/viewPagerIndicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|center_horizontal"
@@ -40,7 +40,7 @@
         </android.support.v4.view.ViewPager>
 
         <ImageView
-            android:id="@+id/screen_lock_switch"
+            android:id="@+id/screenLockSwitch"
             android:layout_width="58dp"
             android:layout_height="58dp"
             android:layout_alignParentBottom="true"
@@ -56,18 +56,18 @@
             tools:targetApi="lollipop"/>
 
         <ProgressBar
-            android:id="@+id/progress_bar"
+            android:id="@+id/progressBar"
             android:layout_width="26dp"
             android:layout_height="26dp"
             android:layout_alignParentBottom="true"
             android:layout_gravity="center"
             android:layout_margin="16dp"
-            android:layout_toEndOf="@id/screen_lock_switch"
-            android:layout_toRightOf="@id/screen_lock_switch"
+            android:layout_toEndOf="@id/screenLockSwitch"
+            android:layout_toRightOf="@id/screenLockSwitch"
             android:indeterminateOnly="true"/>
 
         <ImageView
-            android:id="@+id/copy_button"
+            android:id="@+id/copyButton"
             android:layout_width="58dp"
             android:layout_height="58dp"
             android:layout_alignParentBottom="true"
@@ -106,19 +106,19 @@
                 android:src="@drawable/ic_terrain_black_24dp"/>
 
             <TextView
-                android:id="@+id/elevation_label_text_view"
+                android:id="@+id/elevationLabelTextView"
                 style="@style/PositionStatLabelLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/elevation"/>
 
             <TextView
-                android:id="@+id/elevation_value_text_view"
+                android:id="@+id/elevationValueTextView"
                 style="@style/PositionStatValueLandscape"
                 tools:text="10000"/>
 
             <TextView
-                android:id="@+id/elevation_unit_text_view"
+                android:id="@+id/elevationUnitTextView"
                 style="@style/PositionStatUnitLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -139,19 +139,19 @@
                 android:src="@drawable/speedometer"/>
 
             <TextView
-                android:id="@+id/speed_label_text_view"
+                android:id="@+id/speedLabelTextView"
                 style="@style/PositionStatLabelLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/speed"/>
 
             <TextView
-                android:id="@+id/speed_value_text_view"
+                android:id="@+id/speedValueTextView"
                 style="@style/PositionStatValueLandscape"
                 tools:text="100"/>
 
             <TextView
-                android:id="@+id/speed_unit_text_view"
+                android:id="@+id/speedUnitTextView"
                 style="@style/PositionStatUnitLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -172,19 +172,19 @@
                 android:src="@drawable/ic_explore_black_24dp"/>
 
             <TextView
-                android:id="@+id/bearing_label_text_view"
+                android:id="@+id/bearingLabelTextView"
                 style="@style/PositionStatLabelLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/bearing"/>
 
             <TextView
-                android:id="@+id/bearing_value_text_view"
+                android:id="@+id/bearingValueTextView"
                 style="@style/PositionStatValueLandscape"
                 tools:text="359"/>
 
             <TextView
-                android:id="@+id/bearing_unit_text_view"
+                android:id="@+id/bearingUnitTextView"
                 style="@style/PositionStatUnitLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -205,21 +205,21 @@
                 android:src="@drawable/bullseye"/>
 
             <TextView
-                android:id="@+id/accuracy_label_text_view"
+                android:id="@+id/accuracyLabelTextView"
                 style="@style/PositionStatLabelLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/accuracy"/>
 
             <TextView
-                android:id="@+id/accuracy_value_text_view"
+                android:id="@+id/accuracyValueTextView"
                 style="@style/PositionStatValueLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="10"/>
 
             <TextView
-                android:id="@+id/accuracy_unit_text_view"
+                android:id="@+id/accuracyUnitTextView"
                 style="@style/PositionStatUnitLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
