--- a/app/src/main/res/layout-large/position_fragment.xml
+++ b/app/src/main/res/layout-large/position_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:id="@+id/main_activity_layout"
+    android:id="@+id/mainActivityLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -17,7 +17,7 @@
 
     <!-- Coordinates -->
     <RelativeLayout
-        android:id="@+id/coordinates_layout"
+        android:id="@+id/coordinatesLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -25,7 +25,7 @@
         android:gravity="center">
 
         <android.support.v4.view.ViewPager
-            android:id="@+id/coordinates_view_pager"
+            android:id="@+id/coordinatesViewPager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/activity_vertical_margin"
@@ -35,7 +35,7 @@
             android:paddingStart="@dimen/activity_horizontal_margin">
 
             <com.itsronald.widget.ViewPagerIndicator
-                android:id="@+id/view_pager_indicator"
+                android:id="@+id/viewPagerIndicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|center_horizontal"
@@ -46,7 +46,7 @@
         </android.support.v4.view.ViewPager>
 
         <ImageView
-            android:id="@+id/screen_lock_switch"
+            android:id="@+id/screenLockSwitch"
             android:layout_width="58dp"
             android:layout_height="58dp"
             android:layout_alignParentBottom="true"
@@ -61,18 +61,18 @@
             tools:targetApi="lollipop"/>
 
         <ProgressBar
-            android:id="@+id/progress_bar"
+            android:id="@+id/progressBar"
             android:layout_width="26dp"
             android:layout_height="26dp"
             android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@id/screen_lock_switch"
-            android:layout_toEndOf="@id/screen_lock_switch"
+            android:layout_toRightOf="@id/screenLockSwitch"
+            android:layout_toEndOf="@id/screenLockSwitch"
             android:layout_gravity="center"
             android:layout_margin="16dp"
             android:indeterminateOnly="true"/>
 
         <ImageView
-            android:id="@+id/copy_button"
+            android:id="@+id/copyButton"
             android:layout_width="58dp"
             android:layout_height="58dp"
             android:layout_alignParentBottom="true"
@@ -101,19 +101,19 @@
             android:src="@drawable/ic_terrain_black_24dp"/>
 
         <TextView
-            android:id="@+id/elevation_label_text_view"
+            android:id="@+id/elevationLabelTextView"
             style="@style/PositionStatLabelLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/elevation"/>
 
         <TextView
-            android:id="@+id/elevation_value_text_view"
+            android:id="@+id/elevationValueTextView"
             style="@style/PositionStatValueLarge"
             tools:text="10000"/>
 
         <TextView
-            android:id="@+id/elevation_unit_text_view"
+            android:id="@+id/elevationUnitTextView"
             style="@style/PositionStatUnitLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -134,19 +134,19 @@
             android:src="@drawable/speedometer"/>
 
         <TextView
-            android:id="@+id/speed_label_text_view"
+            android:id="@+id/speedLabelTextView"
             style="@style/PositionStatLabelLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/speed"/>
 
         <TextView
-            android:id="@+id/speed_value_text_view"
+            android:id="@+id/speedValueTextView"
             style="@style/PositionStatValueLarge"
             tools:text="100"/>
 
         <TextView
-            android:id="@+id/speed_unit_text_view"
+            android:id="@+id/speedUnitTextView"
             style="@style/PositionStatUnitLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -167,19 +167,19 @@
             android:src="@drawable/ic_explore_black_24dp"/>
 
         <TextView
-            android:id="@+id/bearing_label_text_view"
+            android:id="@+id/bearingLabelTextView"
             style="@style/PositionStatLabelLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/bearing"/>
 
         <TextView
-            android:id="@+id/bearing_value_text_view"
+            android:id="@+id/bearingValueTextView"
             style="@style/PositionStatValueLarge"
             tools:text="359"/>
 
         <TextView
-            android:id="@+id/bearing_unit_text_view"
+            android:id="@+id/bearingUnitTextView"
             style="@style/PositionStatUnitLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -200,21 +200,21 @@
             android:src="@drawable/bullseye"/>
 
         <TextView
-            android:id="@+id/accuracy_label_text_view"
+            android:id="@+id/accuracyLabelTextView"
             style="@style/PositionStatLabelLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/accuracy"/>
 
         <TextView
-            android:id="@+id/accuracy_value_text_view"
+            android:id="@+id/accuracyValueTextView"
             style="@style/PositionStatValueLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="10"/>
 
         <TextView
-            android:id="@+id/accuracy_unit_text_view"
+            android:id="@+id/accuracyUnitTextView"
             style="@style/PositionStatUnitLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
