--- a/app/src/main/res/layout/position_fragment.xml
+++ b/app/src/main/res/layout/position_fragment.xml
@@ -16,7 +16,7 @@
 
     <!-- Coordinates -->
     <RelativeLayout
-        android:id="@+id/coordinates_layout"
+        android:id="@+id/coordinatesLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -24,7 +24,7 @@
         android:minHeight="240dp">
 
         <android.support.v4.view.ViewPager
-            android:id="@+id/coordinates_view_pager"
+            android:id="@+id/coordinatesViewPager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/activity_vertical_margin"
@@ -34,7 +34,7 @@
             android:paddingStart="@dimen/activity_horizontal_margin">
 
             <com.itsronald.widget.ViewPagerIndicator
-                android:id="@+id/view_pager_indicator"
+                android:id="@+id/viewPagerIndicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|center_horizontal"
@@ -45,12 +45,12 @@
         </android.support.v4.view.ViewPager>
 
         <ImageView
-            android:id="@+id/screen_lock_switch"
+            android:id="@+id/screenLockSwitch"
             android:layout_width="58dp"
             android:layout_height="58dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/settings_screen_lock_content_description"
             android:padding="16dp"
@@ -60,23 +60,23 @@
             tools:targetApi="lollipop"/>
 
         <ProgressBar
-            android:id="@+id/progress_bar"
+            android:id="@+id/progressBar"
             android:layout_width="26dp"
             android:layout_height="26dp"
             android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@id/screen_lock_switch"
-            android:layout_toEndOf="@id/screen_lock_switch"
             android:layout_gravity="center"
             android:layout_margin="16dp"
+            android:layout_toEndOf="@id/screenLockSwitch"
+            android:layout_toRightOf="@id/screenLockSwitch"
             android:indeterminateOnly="true"/>
 
         <ImageView
-            android:id="@+id/copy_button"
+            android:id="@+id/copyButton"
             android:layout_width="58dp"
             android:layout_height="58dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/settings_copy_coordinates_content_description"
             android:padding="16dp"
@@ -100,19 +100,19 @@
             android:src="@drawable/ic_terrain_black_24dp"/>
 
         <TextView
-            android:id="@+id/elevation_label_text_view"
+            android:id="@+id/elevationLabelTextView"
             style="@style/PositionStatLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/elevation"/>
 
         <TextView
-            android:id="@+id/elevation_value_text_view"
+            android:id="@+id/elevationValueTextView"
             style="@style/PositionStatValue"
             tools:text="10000"/>
 
         <TextView
-            android:id="@+id/elevation_unit_text_view"
+            android:id="@+id/elevationUnitTextView"
             style="@style/PositionStatUnit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -133,19 +133,19 @@
             android:src="@drawable/speedometer"/>
 
         <TextView
-            android:id="@+id/speed_label_text_view"
+            android:id="@+id/speedLabelTextView"
             style="@style/PositionStatLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/speed"/>
 
         <TextView
-            android:id="@+id/speed_value_text_view"
+            android:id="@+id/speedValueTextView"
             style="@style/PositionStatValue"
             tools:text="100"/>
 
         <TextView
-            android:id="@+id/speed_unit_text_view"
+            android:id="@+id/speedUnitTextView"
             style="@style/PositionStatUnit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -166,19 +166,19 @@
             android:src="@drawable/ic_explore_black_24dp"/>
 
         <TextView
-            android:id="@+id/bearing_label_text_view"
+            android:id="@+id/bearingLabelTextView"
             style="@style/PositionStatLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/bearing"/>
 
         <TextView
-            android:id="@+id/bearing_value_text_view"
+            android:id="@+id/bearingValueTextView"
             style="@style/PositionStatValue"
             tools:text="359"/>
 
         <TextView
-            android:id="@+id/bearing_unit_text_view"
+            android:id="@+id/bearingUnitTextView"
             style="@style/PositionStatUnit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -199,21 +199,21 @@
             android:src="@drawable/bullseye"/>
 
         <TextView
-            android:id="@+id/accuracy_label_text_view"
+            android:id="@+id/accuracyLabelTextView"
             style="@style/PositionStatLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/accuracy"/>
 
         <TextView
-            android:id="@+id/accuracy_value_text_view"
+            android:id="@+id/accuracyValueTextView"
             style="@style/PositionStatValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="10"/>
 
         <TextView
-            android:id="@+id/accuracy_unit_text_view"
+            android:id="@+id/accuracyUnitTextView"
             style="@style/PositionStatUnit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
